rust/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__calculated__mom_growth.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/calculated.rs
expression: result
---
orders__created_at_month | orders__mom_growth    
-------------------------+-----------------------
2024-01-01 00:00:00      | NULL                  
2024-02-01 00:00:00      | 0.50000000000000000000
2024-03-01 00:00:00      | 0.33333333333333333333
